--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "joi": "^17.4.2",
+    "mongodb": "^4.1.4",
+    "mongoose": "^6.0.13",
+    "morgan": "~1.9.1",
+    "njwt": "^1.1.0"
   }
 }
